2 этап(iter 60)